Bug 32952 - chat state misparsed in GMail PMUC
Summary: chat state misparsed in GMail PMUC
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL: http://git.collabora.co.uk/?p=telepat...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-09 23:24 UTC by Danielle Madeley
Modified: 2011-01-10 03:24 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Danielle Madeley 2011-01-09 23:24:10 UTC
It looks like when chatting on a GMail PMUC, the chat state is somehow misparsed as ACTIVE instead of COMPOSING.

_end_element_ns: Received stanza
* message xmlns='jabber:client' from='private-chat-f8d27227-e497-46ab-ae82-5448c1c42eb9@groupchat.google.com/dannielle.meyer_gmail.com' to='danielle.madeley@collabora.co.uk/e850acef' type='groupchat' jid='dannielle.meyer@gmail.com'
    * composing xmlns='http://jabber.org/protocol/chatstates'
    * x xmlns='google:nosave' value='disabled'
    * record xmlns='http://jabber.org/protocol/archive' otr='false'

signal sender=:1.1012 -> dest=(null destination) serial=3279 path=/org/freedesktop/Telepathy/Connection/gabble/jabber/danielle_2emadeley_40collabora_2eco_2euk_2fe850acef/MucChannel1; interface=org.freedesktop.Telepathy.Channel.Interface.ChatState; member=ChatStateChanged
   uint32 102
   uint32 2

_end_element_ns: Received stanza
* message xmlns='jabber:client' from='private-chat-f8d27227-e497-46ab-ae82-5448c1c42eb9@groupchat.google.com/dannielle.meyer_gmail.com' to='danielle.madeley@collabora.co.uk/e850acef' type='groupchat' jid='dannielle.meyer@gmail.com'
    * paused xmlns='http://jabber.org/protocol/chatstates'
    * x xmlns='google:nosave' value='disabled'
    * record xmlns='http://jabber.org/protocol/archive' otr='false'

signal sender=:1.1012 -> dest=(null destination) serial=3286 path=/org/freedesktop/Telepathy/Connection/gabble/jabber/danielle_2emadeley_40collabora_2eco_2euk_2fe850acef/MucChannel1; interface=org.freedesktop.Telepathy.Channel.Interface.ChatState; member=ChatStateChanged
   uint32 102
   uint32 3
Comment 1 Will Thompson 2011-01-10 03:24:51 UTC
Fixed! It'll be in 0.11.5.

commit e60d9cda68b22888f5724b72df920f767dd232f1
Author: Will Thompson <will.thompson@collabora.co.uk>
Date:   Mon Jan 10 11:17:08 2011 +0000

    MUC: correctly parse 'composing'
    
    Wocky misparsed the 'composing' chat state in MUCs. This commit updates
    Gabble to a fixed version of Wocky, fixes it for the API change, and
    adds a regression test.
    
    Reviewed-by: Danielle Madeley <danielle.madeley@collabora.co.uk>
    Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=32952>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.