MUC: correctly parse 'composing'

Wocky misparsed the 'composing' chat state in MUCs. This commit updates
Gabble to a fixed version of Wocky, fixes it for the API change, and
adds a regression test.

Reviewed-by: Danielle Madeley <danielle.madeley@collabora.co.uk>
Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=32952>